--- a/defense/abbr.tex
+++ b/defense/abbr.tex
@@ -30,10 +30,11 @@
 }
 
 \definecolor{red}{rgb}{0.7, 0.11, 0.11}
-\definecolor{green}{rgb}{0, 0.8, 0.2}
+\definecolor{green}{RGB}{0,153,20}%{rgb}{0, 0.8, 0.2}
 
 \tikzstyle{point}=[circle,draw,thick,fill=black,scale=0.2]
 \tikzstyle{point+}=[circle,draw=red,thick,fill=red,scale=0.3]
+\tikzstyle{pointl}=[circle,draw=red,thick,fill=blue,scale=0.3]
 \tikzstyle{class2}=[ellipse, draw, minimum width=2cm, minimum height=1cm]
 \tikzstyle{class1}=[ellipse, draw, minimum width=1cm, minimum height=1cm]
 
